--- a/spark/spark_gen_sequence.ipynb
+++ b/spark/spark_gen_sequence.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/27 06:30:07 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/01/27 06:35:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -22,16 +24,13 @@
     "\n",
     "## create the spark connection/instance\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"test\") \\\n",
-    "    .config(\"spark.sql.warehouse.dir\", \"./test_dw\") \\\n",
-    "    .getOrCreate()\n",
-    "\n",
+    "spark = SparkSession.builder.appName(\"sequence\").getOrCreate()\n",
     "tot_rows = 1_000_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,17 +38,19 @@
     "ints = []\n",
     "for i in range(1,tot_rows+1):\n",
     "    ints.append({'row_id':i})\n",
-    "df = spark.createDataFrame(ints)"
+    "df = spark.createDataFrame(ints)\n",
+    "df.write.mode('overwrite').parquet('./numbers1.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#method 2: built in spark range iterator\n",
-    "df2 = spark.range(1,tot_rows+1).toDF('row_id')"
+    "df2 = spark.range(1,tot_rows+1).toDF('row_id')\n",
+    "df2.write.mode('overwrite').parquet('./numbers2.parquet')"
    ]
   }
  ],
