--- a/spark/spark_gen_sequence.ipynb
+++ b/spark/spark_gen_sequence.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/27 06:35:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Author: Matt Martin\n",
@@ -38,8 +28,8 @@
     "ints = []\n",
     "for i in range(1,tot_rows+1):\n",
     "    ints.append({'row_id':i})\n",
-    "df = spark.createDataFrame(ints)\n",
-    "df.write.mode('overwrite').parquet('./numbers1.parquet')"
+    "df1 = spark.createDataFrame(ints)\n",
+    "df1.write.mode('overwrite').parquet('./numbers1.parquet')"
    ]
   },
   {
@@ -51,6 +41,25 @@
     "#method 2: built in spark range iterator\n",
     "df2 = spark.range(1,tot_rows+1).toDF('row_id')\n",
     "df2.write.mode('overwrite').parquet('./numbers2.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"select count(*) as row_cnt from {df}\", df=df2).show()\n",
+    "spark.sql(\"select count(*) as row_cnt from {df}\", df=df1).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop"
    ]
   }
  ],
