--- a/spark/spark_gen_sequence.ipynb
+++ b/spark/spark_gen_sequence.ipynb
@@ -2,55 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Author: Matt Martin\n",
     "Date: 1/27/24\n",
-    "Desc: Shows a few ways to generate a sequential list of integers for a dataframe/table\n",
+    "Desc: Various techniques to generate data in spark\n",
     "\"\"\"\n",
     "\n",
     "## create the spark connection/instance\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"sequence\").getOrCreate()\n",
-    "tot_rows = 1_000_000"
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"sequence\") \\\n",
+    "    .config(\"spark.driver.memory\", \"2g\") \\\n",
+    "    .config(\"spark.executor.memory\", \"8g\") \\\n",
+    "    .config(\"spark.executor.instances\", 10) \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "tot_rows = 1_000_000\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#method 1: a loop\n",
-    "ints = []\n",
-    "for i in range(1,tot_rows+1):\n",
-    "    ints.append({'row_id':i})\n",
-    "df1 = spark.createDataFrame(ints)\n",
-    "df1.write.mode('overwrite').parquet('./numbers1.parquet')"
+    "import os\n",
+    "home_dir = os.path.expanduser(\"~\")\n",
+    "f_path = \"{0}/test_dummy_data/python/\".format(home_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#built in spark range iterator\n",
+    "df = spark.range(1,tot_rows+1).toDF('row_id')\n",
+    "df.write.mode('overwrite').parquet('{0}/numbers.parquet'.format(f_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#method 2: built in spark range iterator\n",
-    "df2 = spark.range(1,tot_rows+1).toDF('row_id')\n",
-    "df2.write.mode('overwrite').parquet('./numbers2.parquet')"
+    "#generate a list of dates\n",
+    "start_dt = \"2001-01-01\"\n",
+    "end_dt = \"2024-05-10\"\n",
+    "\n",
+    "# Generate a DataFrame with a column containing the exploded dates\n",
+    "dates = spark.sql(f\"SELECT explode(sequence(to_date('{start_dt}'), to_date('{end_dt}'), interval 1 day)) as date\")\n",
+    "dates.write.mode('overwrite').parquet('{0}/dates.parquet'.format(f_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.sql(\"select count(*) as row_cnt from {df}\", df=df2).show()\n",
-    "spark.sql(\"select count(*) as row_cnt from {df}\", df=df1).show()"
+    "df.createOrReplaceTempView('numbers')\n",
+    "dates.createOrReplaceTempView('dates')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+\n",
+      "|row_id|      date|\n",
+      "+------+----------+\n",
+      "|     1|2001-01-01|\n",
+      "|     1|2001-01-02|\n",
+      "|     1|2001-01-03|\n",
+      "|     1|2001-01-04|\n",
+      "|     1|2001-01-05|\n",
+      "+------+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "select n.row_id, d.date\n",
+    "from numbers as n, dates as d\n",
+    "limit 10000\n",
+    "\"\"\"\n",
+    "spark.sql(sql).show(5)"
    ]
   },
   {
